tests/samples/negative/generics/generic_export_c_unsupported.ax
module generic_export_c_unsupported;

export c fn identity<T>(value: T) -> T {
    return value;
}
